lib_LTLIBRARIES = libdavenport.la
libdavenport_la_SOURCES = \
  aggregate_solution.c aggregate_solution.h \
  network.c network.h \
  davenport.c davenport.h \
  lower_bound.c lower_bound.h \
  preference_graph.c preference_graph.h \
  preflow_push.c preflow_push.h \
  ranking.c ranking.h \
  solution_graph.c solution_graph.h \
  sorting.c sorting.h \
  tarjan.c tarjan.h
